Intersection Observer intersections are wrong with zooming https://bugs.webkit.org/show_bug.cgi?id=209264

Reviewed by Simon Fraser.

Source/WebCore:

An IntersectionObserver's rootMargin is expressed in CSS pixels,
but we weren't accounting for page zoom. Fix this by multiplying
the root margin by the zoom factor.

Test: intersection-observer/root-margin-with-zoom.html

* dom/Document.cpp:
(WebCore::expandRootBoundsWithRootMargin):
(WebCore::computeIntersectionState):

LayoutTests:

* intersection-observer/root-margin-with-zoom.html: Added.


Canonical link: https://commits.webkit.org/222293@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258787 268f45cc-cd09-0410-ab3c-d52691b4dbfc